--- a/layoutprac.html
+++ b/layoutprac.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>css | simple template</title>
-    <link rel="stylesheet" href="../css/layoutprac.css" />
+    <link rel="stylesheet" href="css/layoutprac.css" />
   </head>
   <body>
     <!-- header -->
